# Python_Skillbox

./: .gitignore  Module1. Practice.ipynb  README.md  errors.txt  exprs.txt  m1_python_for_techniks.ipynb  m2_python_for_techniks.ipynb  pyproject.toml  regular_expressions.ipynb  results.txt  text.txt
1_1-3_first_tasks/: m1-3_practice_skill_python.ipynb
1_4_statistic/: m1_4_statistic.ipynb  m1_4_statistic.py
1_5_concept_matrix/: Mod1.ipynb  Mod1.py
1_5_simple_numbers/: m1_5_simple_numbers.ipynb  m1_5_simple_numbers.py
1_6_war_and_peace/: m1_6_war_and_peace.py  m1_6_war_end_peace.ipynb
1_7_calculator/: 1_7_calculator.ipynb  1_7_calculator.py
2_10_m2_Practice_work/: data.txt  errors.txt  results.txt  sportcomplex_data.txt  task_2.ipynb  task_3.py  task_3_rows_taylor.ipynb  task_4_сoordinates_transformation.ipynb  task_5_molecules.ipynb  task_6.ipynb  task_6_calculator.py  task_7_сabinet_сaesar.py  task_8_sport+complex_3.py  task_8_v3.ipynb
2_8_Running_to_logging/: logging_m.ipynb  loguru_m.ipynb
m3_symbolic_and_numerical_calculations/for_practice_m3/: task_1 v.2.ipynb  task_2.ipynb  task_3 v.2.ipynb  task_3.ipynb  task_4 v.1.ipynb  task_4_2 v.1.ipynb  task_5_v.1.ipynb
m3_symbolic_and_numerical_calculations/lessons/: 3.2_sympy_diff_int.ipynb  3.4.2_visualization.ipynb  3.4_linear_equations_matrices.ipynb  3.6_numpy.ipynb  3.9_Practice_Module_3.ipynb
mpolynovsky_skills/Plotly_Seaborn_Explore_Text_Dataset/: explore_text_dataset.ipynb
mpolynovsky_skills/pandas_lessons/: les1.ipynb  les2.ipynb  panda_IO.ipynb
mpolynovsky_skills/working_with_REST_API_Requests/: request.ipynb
normalization/: wilberries_api.py  wildberries_api.ipynb
