[tool.poetry]
name = "python-skillbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
black = "^25.1.0"
sympy = "^1.13.3"
loguru = "^0.7.3"
numpy = "^2.2.4"
pandas = "^2.2.3"
faker = "^37.1.0"
matplotlib = "^3.10.1"
skipy = "^0.2.3"
scipy = "^1.15.2"
openpyxl = "^3.1.5"
lxml = "^5.4.0"
g4f = {extras = ["all"], version = "^0.5.2.1"}
cufflinks = "^0.17.3"
nltk = "^3.9.1"
plotly = "^6.0.1"
notebook = "^7.4.2"

[tool.black]
line-length = 69
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

